AccountGallery: fix thumbnails wrapping too soon, fixes #1057

--- a/app/styles/accounts.scss
+++ b/app/styles/accounts.scss
@@ -161,7 +161,7 @@ a .account__avatar {
 }
 
 .account-gallery__item {
-  @apply rounded-lg m-1;
+  @apply rounded-lg p-1;
   border: 0;
   box-sizing: border-box;
   display: block;
